--- a/XtreamJson/src/main/resources/templates/fragments/navbar.html
+++ b/XtreamJson/src/main/resources/templates/fragments/navbar.html
@@ -1,7 +1,7 @@
 <div th:fragment="navbar">
 <nav class="navbar navbar-expand-lg navbar-dark bg-gradient shadow rounded fixed-top" style="background: linear-gradient(90deg, #232526 0%, #414345 100%);">
   <div class="container-fluid">
-    <a class="navbar-brand d-flex align-items-center" href="#">
+    <a class="navbar-brand d-flex align-items-center" href="/">
       <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/icons/film.svg" alt="XtreamJson" width="32" height="32" class="me-2">
       <span style="font-weight: bold; font-size: 1.4rem; letter-spacing: 1px;">XtreamJson</span>
     </a>
